# obs-timelapse

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
build-aux/: .run-format.zsh
cmake/common/: FindFFmpeg.cmake  buildspec_common.cmake  osconfig.cmake
cmake/linux/: defaults.cmake  helpers.cmake  post-package.cmake
cmake/macos/: defaults.cmake
data/locale/: en-US.ini
docs/: building.md  user-guide.md
src/: capture-session.cpp  capture-session.hpp  controller.cpp  controller.hpp  controls-button.cpp  controls-button.hpp  core-utils.cpp  core-utils.hpp  mkv-writer.cpp  mkv-writer.hpp  plugin-main.cpp  png-writer.cpp  png-writer.hpp  settings.cpp  settings.hpp  timelapse-dialog.cpp  timelapse-dialog.hpp
tests/: test-core-utils.cpp
